nestjs-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nestjs-api-ingress

spec:
  ingressClassName: traefik
  rules:
    - host: apinest.misteraxel.pp.ua
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nestjs-app-service
                port:
                  number: 3000
